--- a/cloudbuild-frontend.yaml
+++ b/cloudbuild-frontend.yaml
@@ -1,13 +1,18 @@
 steps:
-  # Build the frontend Docker image
+  # Build the frontend Docker image with build-time env var
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'gcr.io/$PROJECT_ID/recipe-frontend', './frontend']
+    args: [
+      'build', 
+      '--build-arg', 'VITE_API_URL=https://recipe-backend-422209304891.us-central1.run.app',
+      '-t', 'gcr.io/$PROJECT_ID/recipe-frontend', 
+      './frontend'
+    ]
   
   # Push the image to Container Registry
   - name: 'gcr.io/cloud-builders/docker'
     args: ['push', 'gcr.io/$PROJECT_ID/recipe-frontend']
   
-  # Deploy to Cloud Run
+  # Deploy to Cloud Run (remove the env var from here)
   - name: 'gcr.io/cloud-builders/gcloud'
     args: [
       'run', 'deploy', 'recipe-frontend',
@@ -15,9 +20,8 @@ steps:
       '--platform', 'managed',
       '--region', 'us-central1',
       '--allow-unauthenticated',
-      '--port', '80',
-      '--set-env-vars', 'VITE_API_URL=https://recipe-backend-422209304891.us-central1.run.app/api/recipes'
+      '--port', '80'
     ]
-# Add logging configuration
+
 options:
   logging: CLOUD_LOGGING_ONLY
