--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -10,6 +10,10 @@ COPY package*.json ./
 # Install dependencies
 RUN npm install
 
+# Accept build argument
+ARG VITE_API_URL
+ENV VITE_API_URL=$VITE_API_URL
+
 # Copy source code
 COPY . .
 
