fixed build file

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,7 +53,9 @@ jobs:
     
     - name: Configure Docker for Google Cloud
       if: success()
-      run: gcloud auth configure-docker
+      run: |
+        gcloud auth configure-docker
+        gcloud auth configure-docker gcr.io
     
     - name: Build and push backend image
       if: success()
