--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -66,23 +66,26 @@ jobs:
       if: success()
       run: |
         cd backend
-        docker build -t ${{ secrets.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.ARTIFACT_REPO_NAME }}/backend:${{ github.sha }} .
-        docker push ${{ secrets.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.ARTIFACT_REPO_NAME }}/backend:${{ github.sha }}
+        REPO_NAME=$(echo "${{ secrets.ARTIFACT_REPO_NAME }}" | tr '[:upper:]' '[:lower:]')
+        docker build -t ${{ secrets.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${REPO_NAME}/backend:${{ github.sha }} .
+        docker push ${{ secrets.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${REPO_NAME}/backend:${{ github.sha }}
     
     - name: Build and push frontend image
       if: success()
       run: |
         cd frontend
+        REPO_NAME=$(echo "${{ secrets.ARTIFACT_REPO_NAME }}" | tr '[:upper:]' '[:lower:]')
         # Get the backend URL for the frontend build
         BACKEND_URL=$(gcloud run services describe recipe-backend --region=${{ secrets.GCP_REGION }} --format='value(status.url)' 2>/dev/null || echo "https://recipe-backend-placeholder.run.app")
-        docker build --build-arg VITE_API_URL=$BACKEND_URL -t ${{ secrets.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.ARTIFACT_REPO_NAME }}/frontend:${{ github.sha }} .
-        docker push ${{ secrets.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.ARTIFACT_REPO_NAME }}/frontend:${{ github.sha }}
+        docker build --build-arg VITE_API_URL=$BACKEND_URL -t ${{ secrets.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${REPO_NAME}/frontend:${{ github.sha }} .
+        docker push ${{ secrets.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${REPO_NAME}/frontend:${{ github.sha }}
     
     - name: Deploy backend to Cloud Run
       if: success()
       run: |
+        REPO_NAME=$(echo "${{ secrets.ARTIFACT_REPO_NAME }}" | tr '[:upper:]' '[:lower:]')
         gcloud run deploy recipe-backend \
-          --image ${{ secrets.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.ARTIFACT_REPO_NAME }}/backend:${{ github.sha }} \
+          --image ${{ secrets.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${REPO_NAME}/backend:${{ github.sha }} \
           --region ${{ secrets.GCP_REGION }} \
           --platform managed \
           --allow-unauthenticated \
@@ -93,8 +96,9 @@ jobs:
     - name: Deploy frontend to Cloud Run
       if: success()
       run: |
+        REPO_NAME=$(echo "${{ secrets.ARTIFACT_REPO_NAME }}" | tr '[:upper:]' '[:lower:]')
         gcloud run deploy recipe-frontend \
-          --image ${{ secrets.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.ARTIFACT_REPO_NAME }}/frontend:${{ github.sha }} \
+          --image ${{ secrets.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${REPO_NAME}/frontend:${{ github.sha }} \
           --region ${{ secrets.GCP_REGION }} \
           --platform managed \
           --allow-unauthenticated \
