--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -60,32 +60,28 @@ jobs:
       if: success()
       run: |
         gcloud auth configure-docker
-        gcloud auth configure-docker ${{ secrets.GCP_REGION }}-docker.pkg.dev
     
     - name: Build and push backend image
       if: success()
       run: |
         cd backend
-        REPO_NAME=$(echo "${{ secrets.ARTIFACT_REPO_NAME }}" | tr '[:upper:]' '[:lower:]')
-        docker build -t ${{ secrets.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${REPO_NAME}/backend:${{ github.sha }} .
-        docker push ${{ secrets.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${REPO_NAME}/backend:${{ github.sha }}
+        docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/recipe-backend:${{ github.sha }} .
+        docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/recipe-backend:${{ github.sha }}
     
     - name: Build and push frontend image
       if: success()
       run: |
         cd frontend
-        REPO_NAME=$(echo "${{ secrets.ARTIFACT_REPO_NAME }}" | tr '[:upper:]' '[:lower:]')
         # Get the backend URL for the frontend build
         BACKEND_URL=$(gcloud run services describe recipe-backend --region=${{ secrets.GCP_REGION }} --format='value(status.url)' 2>/dev/null || echo "https://recipe-backend-placeholder.run.app")
-        docker build --build-arg VITE_API_URL=$BACKEND_URL -t ${{ secrets.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${REPO_NAME}/frontend:${{ github.sha }} .
-        docker push ${{ secrets.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${REPO_NAME}/frontend:${{ github.sha }}
+        docker build --build-arg VITE_API_URL=$BACKEND_URL -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/recipe-frontend:${{ github.sha }} .
+        docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/recipe-frontend:${{ github.sha }}
     
     - name: Deploy backend to Cloud Run
       if: success()
       run: |
-        REPO_NAME=$(echo "${{ secrets.ARTIFACT_REPO_NAME }}" | tr '[:upper:]' '[:lower:]')
         gcloud run deploy recipe-backend \
-          --image ${{ secrets.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${REPO_NAME}/backend:${{ github.sha }} \
+          --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/recipe-backend:${{ github.sha }} \
           --region ${{ secrets.GCP_REGION }} \
           --platform managed \
           --allow-unauthenticated \
@@ -96,9 +92,8 @@ jobs:
     - name: Deploy frontend to Cloud Run
       if: success()
       run: |
-        REPO_NAME=$(echo "${{ secrets.ARTIFACT_REPO_NAME }}" | tr '[:upper:]' '[:lower:]')
         gcloud run deploy recipe-frontend \
-          --image ${{ secrets.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${REPO_NAME}/frontend:${{ github.sha }} \
+          --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/recipe-frontend:${{ github.sha }} \
           --region ${{ secrets.GCP_REGION }} \
           --platform managed \
           --allow-unauthenticated \
